--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@babel/runtime": "7.18.6",
+    "@considonet/stylelint-config-bem": "^1.0.1",
+    "@considonet/stylelint-config-order": "^1.0.1",
+    "@considonet/stylelint-config-scss": "^1.0.1",
+    "@testing-library/react": "^13.4.0",
     "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
@@ -78,6 +82,7 @@
     "@types/node": "^14.0.8",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/serialize-javascript": "^1.5.0",
     "@types/source-map-support": "^0.5.1",
     "@types/webpack": "^4.41.7",
@@ -130,6 +135,7 @@
     "istanbul": "^0.4.5",
     "istanbul-reports": "^1.3.0",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^1.3.3",
     "mockdate": "^2.0.2",
@@ -150,6 +156,7 @@
     "react-test-renderer": "^16.4.1",
     "redux-devtools-extension": "^2.13.0",
     "redux-mock-store": "^1.5.3",
+    "resolve": "1.17.0",
     "resolve-url-loader": "^3.1.2",
     "rimraf": "^2.6.2",
     "serverless": "^2.21.1",
@@ -190,16 +197,10 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
     "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2",
-    "@considonet/stylelint-config-bem": "^1.0.1",
-    "@considonet/stylelint-config-order": "^1.0.1",
-    "@considonet/stylelint-config-scss": "^1.0.1",
-    "jest-environment-jsdom": "^29.0.3",
-    "@testing-library/react": "^13.4.0",
-    "@types/react-syntax-highlighter": "^13.5.2",
-    "resolve": "1.17.0"
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
+    "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
     "@lagunovsky/redux-react-router": "^4.0.0",
     "aws-serverless-express": "^3.4.0",
