--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "hook:before:offline:start": "yarn build:client:prod",
     "prepare": "husky install",
     "types": "tcm src"
-
   },
   "devDependencies": {
     "@babel/cli": "7.19.3",
@@ -169,6 +168,7 @@
     "stylelint-selector-bem-pattern": "^2.1.1",
     "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.3",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typed-css-modules": "^0.7.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
@@ -200,6 +200,8 @@
     "express": "4.18.2",
     "history": "^5.3.0",
     "moment": "^2.29.4",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
@@ -216,6 +218,7 @@
     "regenerator-runtime": "0.13.11",
     "reselect": "4.1.7",
     "source-map-support": "^0.5.21",
+    "stream-http": "^3.2.0",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.1.0"
   },
