--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prestart": "rimraf dist",
     "prebuild": "rimraf dist",
     "start": "sls offline start --noPrependStageInUrl",
-    "watch": "nodemon --watch './build' --exec 'sls offline start --noPrependStageInUrl --aws-profile s3local'",
+    "watch": "nodemon --watch './build' --exec 'sls offline start --noPrependStageInUrl'",
     "watch:pure": "nodemon --watch './build' --exec 'node dist/server.js'",
     "watch:types": "nodemon --watch './src' --exec 'yarn types'",
     "devclient": "NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
@@ -28,7 +28,9 @@
     "watch:server": "TARGET=serverless webpack --watch",
     "build:prod": "yarn cleanup && NODE_ENV=production yarn build:client && NODE_ENV=production yarn build:server",
     "dev": "yarn cleanup && yarn types && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"yarn devclient\" \"yarn devserver\" \"yarn watch\"",
-    "prod": "yarn cleanup && yarn types && yarn build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodclient\" \"http-server ./build -p 9000\" \"yarn prodserver\" \"yarn watch\" \"yarn watch:types\"",
+    "prod": "yarn cleanup && yarn types && yarn build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodclient\" \"http-server ./build -p 9000 --cors\" \"yarn prodserver\" \"yarn watch\" \"yarn watch:types\"",
+    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
+    "prod:pure": "yarn cleanup && yarn build:style-typings && yarn build:client:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=production concurrently -r --kill-others \"yarn prodserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
     "test:types": "tsc --noEmit",
     "hook:before:offline:start": "yarn build:client:prod",
     "build:style-typings": "node webpack/style-typings.js",
@@ -39,8 +41,6 @@
     "types": "tcm src",
     "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
-    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
-    "prod:pure": "yarn cleanup && yarn build:style-typings && yarn build:client:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=production concurrently -r --kill-others \"yarn prodserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
     "build:dev:pure": "yarn cleanup && NODE_ENV=development yarn build:client && NODE_ENV=development TARGET=server webpack",
     "build:prod:pure": "yarn cleanup && NODE_ENV=production yarn build:client:prod && NODE_ENV=production TARGET=server webpack --mode production",
     "deploy:dev": "yarn build:dev && serverless deploy --verbose --stage development",
@@ -159,14 +159,10 @@
     "resolve": "1.17.0",
     "resolve-url-loader": "^3.1.2",
     "rimraf": "^2.6.2",
-    "serverless": "^2.21.1",
-    "serverless-deployment-bucket": "^1.3.0",
-    "serverless-domain-manager": "^5.1.0",
-    "serverless-offline": "^6.8.0",
-    "serverless-offline-plus-static": "^1.0.4",
-    "serverless-offline-scheduler": "^0.3.8",
-    "serverless-plugin-static": "0.0.4",
-    "serverless-plugin-tracing": "^2.0.0",
+    "serverless": "3.32.2",
+    "serverless-deployment-bucket": "1.6.0",
+    "serverless-domain-manager": "7.0.4",
+    "serverless-offline": "12.0.4",
     "serverless-prune-plugin": "^1.4.3",
     "serverless-s3-local": "^0.6.7",
     "serverless-s3-sync": "^1.15.0",
@@ -203,10 +199,14 @@
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
     "@lagunovsky/redux-react-router": "^4.0.0",
+    "@sentry/node": "^7.54.0",
+    "@sentry/react": "^7.54.0",
+    "@sentry/tracing": "^7.54.0",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "core-js": "^3.8.2",
     "express": "4.18.1",
+    "http-server": "^14.1.1",
     "moment": "^2.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
