Moved vpn github step up the chain

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -72,8 +72,11 @@ jobs:
         sudo apt update
         sudo apt install -y openvpn openvpn-systemd-resolved
 
+    - name: Username password pipe
+      run: echo -e '${{ secrets.OVPN_USERNAME }}\n${{ secrets.OVPN_PASSWORD }}' > my_auth_pass.txt
+
     - name: Connect to VPN
-      run: openvpn --config ./public.ovpn --daemon --auth-user-pass <(echo -e "'"${{ secrets.OVPN_USERNAME }}"'\n'"${{ secrets.OVPN_PASSWORD }}"'")
+      run: openvpn --config ./public.ovpn --daemon --auth-user-pass my_auth_pass.txt
   
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
