Moved vpn github step up the chain

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy-app:
-    runs-on: 'ubuntu-latest'
+    runs-on: 'self-hosted'
     defaults:
       run:
         shell: bash
