Moved vpn github step up the chain

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -7,10 +7,7 @@ on:
 
 jobs:
   deploy-app:
-    runs-on: actions_runner
-    defaults:
-      run:
-        shell: bash
+    runs-on: self-hosted
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
