--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -82,10 +82,12 @@ jobs:
 
     - run: npm install -g yarn
 
+    - run: yarn install 
+
     - run: yarn lint 
 
     - run: yarn test
-    
+
     - run: yarn build:prod:pure
 
     - name: Build and push
@@ -105,15 +107,8 @@ jobs:
     - run: |
         aws s3api put-bucket-cors --bucket devnotnull-ui-production --cors-configuration '{"CORSRules" : [{"AllowedHeaders":["*"],"AllowedMethods":["GET","HEAD", "POST"],"AllowedOrigins":["*"],"ExposeHeaders":[]}]}'
 
-    - run: |
-        aws s3api put-bucket-policy --bucket devnotnull-ui-production --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-production/*" ] }] }'
-
-    - name: Connect to VPN
-      uses: kota65535/github-openvpn-connect-action@v1.0.2
-      with:
-        config_file: ./config.ovpn
-        username: ${{ secrets.OVPN_USERNAME }}
-        password: ${{ secrets.OVPN_PASSWORD }}
+    #- run: |
+    #    aws s3api put-bucket-policy --bucket devnotnull-ui-production --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-production/*" ] }] }'
         
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
 
@@ -123,14 +118,19 @@ jobs:
       continue-on-error: true
 
     - run: |
-        helm install devnotnull-ui devnotnull/nodejs \
-        --version 2 \
-        --set env.NODE_RUNTIME_ENV=production \
+        helm install \                             
+        --version 2 \                    
+        --set env.NODE_RUNTIME_ENV=production \                       
         --set env.CDN_BUCKET=production \
-        --set image.repository=alexbrown201/devnotnull-ui:latest \
-        --set port=3000 \
-        --set service.type=LoadBalancer \
-        --set service.loadBalancerIP=10.150.10.134 \
-        --set image.pullPolicy=Always \
-        --set replicaCount=10
-
+        --set image.repository=alexbrown201/devnotnull-ui:latest \       
+        --set port=3000 \                                                  
+        --set service.type=LoadBalancer \                          
+        --set service.loadBalancerIP=10.150.10.134 \                  
+        --set ingress.tls.secretName=devnotnull.com-production \
+        --set ingress.annotations."kubernetes\.io/ingress\.class"=traefik \
+        --set image.pullPolicy=Always \           
+        --set replicaCount=10 \
+        --set "ingress.hosts[0].host"=devnotnull.com \    
+        --set "ingress.hosts[0].paths[0].path"=/ \
+        devnotnull-ui \ 
+        devnotnull/nodejs
