--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -118,19 +118,19 @@ jobs:
       continue-on-error: true
 
     - run: |
-        helm install \                             
-        --version 2 \                    
-        --set env.NODE_RUNTIME_ENV=production \                       
+        helm install \
+        --version 2 \
+        --set env.NODE_RUNTIME_ENV=production \
         --set env.CDN_BUCKET=production \
-        --set image.repository=alexbrown201/devnotnull-ui:latest \       
-        --set port=3000 \                                                  
-        --set service.type=LoadBalancer \                          
-        --set service.loadBalancerIP=10.150.10.134 \                  
-        --set ingress.tls.secretName=devnotnull.com-production \
+        --set image.repository=alexbrown201/devnotnull-ui:latest \
+        --set port=3000 \
+        --set service.type=LoadBalancer \
+        --set service.loadBalancerIP=10.150.10.134 \
+        --set ingress.tls.secretName=api.devnotnull.com-production \
         --set ingress.annotations."kubernetes\.io/ingress\.class"=traefik \
-        --set image.pullPolicy=Always \           
+        --set image.pullPolicy=Always \
         --set replicaCount=10 \
-        --set "ingress.hosts[0].host"=devnotnull.com \    
+        --set "ingress.hosts[0].host"=devnotnull.com \
         --set "ingress.hosts[0].paths[0].path"=/ \
-        devnotnull-ui \ 
+        devnotnull-ui \
         devnotnull/nodejs
