--- a/.github/workflows/on_merge_main.yml
+++ b/.github/workflows/on_merge_main.yml
@@ -126,7 +126,7 @@ jobs:
         --set port=3000 \
         --set service.type=LoadBalancer \
         --set service.loadBalancerIP=10.150.10.134 \
-        --set ingress.tls.secretName=api.devnotnull.com-production \
+        --set ingress.tls.secretName=devnotnull.com-production \
         --set ingress.annotations."kubernetes\.io/ingress\.class"=traefik \
         --set image.pullPolicy=Always \
         --set replicaCount=10 \
