feat bump babel plugins

--- a/package.json
+++ b/package.json
@@ -50,25 +50,25 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/cli": "7.18.6",
-    "@babel/core": "7.18.6",
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-do-expressions": "7.18.6",
-    "@babel/plugin-proposal-export-default-from": "7.18.6",
-    "@babel/plugin-proposal-function-bind": "7.18.6",
+    "@babel/plugin-proposal-do-expressions": "^7.22.5",
+    "@babel/plugin-proposal-export-default-from": "^7.22.5",
+    "@babel/plugin-proposal-function-bind": "^7.22.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "7.18.6",
-    "@babel/plugin-proposal-partial-application": "7.18.6",
-    "@babel/plugin-proposal-pipeline-operator": "7.18.6",
-    "@babel/plugin-proposal-throw-expressions": "7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-proposal-partial-application": "^7.22.5",
+    "@babel/plugin-proposal-pipeline-operator": "^7.22.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.22.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-inline-elements": "7.18.6",
-    "@babel/plugin-transform-regenerator": "7.18.6",
-    "@babel/plugin-transform-runtime": "7.18.6",
-    "@babel/preset-env": "7.18.6",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/plugin-transform-react-inline-elements": "^7.22.5",
+    "@babel/plugin-transform-regenerator": "^7.22.5",
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "7.18.6",
     "@considonet/stylelint-config-bem": "^1.0.1",
     "@considonet/stylelint-config-order": "^1.0.1",
@@ -116,7 +116,7 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-webpack": "^0.12.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
@@ -156,10 +156,10 @@
     "react-test-renderer": "^16.4.1",
     "redux-devtools-extension": "^2.13.0",
     "redux-mock-store": "^1.5.3",
-    "resolve": "1.17.0",
+    "resolve": "^1.22.2",
     "resolve-url-loader": "^3.1.2",
     "rimraf": "^2.6.2",
-    "serverless": "3.32.2",
+    "serverless": "^3.33.0",
     "serverless-deployment-bucket": "1.6.0",
     "serverless-domain-manager": "7.0.4",
     "serverless-offline": "12.0.4",
@@ -178,7 +178,7 @@
     "stylelint-selector-bem-pattern": "^2.1.1",
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^29.0.1",
-    "typed-css-modules": "^0.6.5",
+    "typed-css-modules": "^0.7.2",
     "typescript": "^4.8.3",
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
@@ -196,6 +196,8 @@
     "workbox-webpack-plugin": "^6.0.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
     "@lagunovsky/redux-react-router": "^4.0.0",
@@ -206,27 +208,34 @@
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "core-js": "^3.8.2",
-    "express": "4.18.1",
+    "express": "^4.18.2",
+    "history": "^5.3.0",
     "http-server": "^14.1.1",
+    "https-browserify": "^1.0.0",
     "moment": "^2.24.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
     "react-intersection-observer": "^9.4.0",
-    "react-redux": "8.0.2",
-    "react-router-dom": "6.3.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.0",
     "react-router-redux": "4.0.8",
     "react-syntax-highlighter": "^15.5.0",
     "redux-devtools": "^3.5.0",
-    "redux-devtools-extension": "2.13.8",
-    "redux-saga": "1.2.0",
-    "regenerator-runtime": "0.13.3",
-    "reselect": "4.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.3",
+    "regenerator-runtime": "^0.13.11",
+    "reselect": "^4.1.8",
     "source-map-support": "^0.5.21",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typesafe-actions": "5.1.0",
-    "web-vitals": "^3.0.1"
+    "web-vitals": "^3.0.1",
+    "yarn-upgrade-minor": "^1.0.13"
   },
   "browserslist": [
     ">0.2%",
