--- a/package.json
+++ b/package.json
@@ -194,8 +194,12 @@
     "classnames": "^2.2.6",
     "core-js": "^3.8.2",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "http-server": "^14.1.1",
+    "https-browserify": "^1.0.0",
     "moment": "^2.24.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
@@ -212,6 +216,8 @@
     "regenerator-runtime": "^0.13.11",
     "reselect": "^4.1.8",
     "source-map-support": "^0.5.21",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1",
     "yarn-upgrade-minor": "^1.0.13"
