--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "build:style-typings": "node webpack/style-typings.js",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
     "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
-    "lint:css": "stylelint '**/*.css'",
-    "lint:css:fix": "stylelint '**/*.css' --fix",
     "types": "tcm src",
     "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
@@ -57,12 +55,8 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "7.18.6",
-    "@considonet/stylelint-config-bem": "^1.0.1",
-    "@considonet/stylelint-config-order": "^1.0.1",
-    "@considonet/stylelint-config-scss": "^1.0.1",
     "@testing-library/react": "^13.4.0",
     "@types/aws-lambda": "^8.10.46",
-    "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^24.0.13",
@@ -80,7 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "assets-webpack-plugin": "^7.0.0",
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.824.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.0.0",
@@ -97,7 +91,7 @@
     "cross-env": "^4.0.0",
     "cross-fetch": "^3.1.4",
     "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "cz-customizable": "^6.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "^8.23.0",
@@ -115,20 +109,12 @@
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "fs-extra": "7.0.0",
     "husky": "^8.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "ignore-styles": "^5.0.1",
-    "image-webpack-loader": "^7.0.0",
     "isomorphic-style-loader": "^5.1.0",
-    "istanbul": "^0.4.5",
-    "istanbul-reports": "^1.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^1.3.3",
-    "mockdate": "^2.0.2",
     "nodemon": "^2.0.7",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "picturefill": "^3.0.2",
     "postcss-assets": "^5.0.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -139,30 +125,17 @@
     "postcss-url": "^10.1.1",
     "prettier": "^1.18.2",
     "process": "0.11.10",
-    "react-hot-loader": "^4.13.0",
-    "react-test-renderer": "^16.4.1",
     "redux-devtools-extension": "^2.13.0",
-    "redux-mock-store": "^1.5.3",
     "resolve": "^1.22.2",
     "resolve-url-loader": "^3.1.2",
     "rimraf": "^2.6.2",
     "serverless": "^3.33.0",
     "serverless-deployment-bucket": "1.6.0",
-    "serverless-domain-manager": "7.0.4",
     "serverless-offline": "12.0.4",
     "serverless-prune-plugin": "^1.4.3",
     "serverless-s3-local": "^0.7.2",
     "serverless-s3-sync": "^1.15.0",
-    "source-map-explorer": "^2.0.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^14.11.0",
-    "stylelint-config-prettier": "^5.2.0",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "stylelint-prettier": "^1.1.1",
-    "stylelint-scss": "^3.9.0",
-    "stylelint-selector-bem-pattern": "^2.1.1",
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^29.0.1",
     "typed-css-modules": "^0.7.2",
@@ -170,17 +143,11 @@
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
     "webpack": "^5.76.0",
-    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
-    "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2"
+    "yarn-upgrade-minor": "^1.0.13"
   },
   "dependencies": {
     "@babel/register": "^7.18.9",
@@ -193,6 +160,7 @@
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "core-js": "^3.8.2",
+    "esbuild-loader": "^3.0.1",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "http-server": "^14.1.1",
@@ -200,6 +168,7 @@
     "moment": "^2.24.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
@@ -218,14 +187,11 @@
     "source-map-support": "^0.5.21",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1",
-    "yarn-upgrade-minor": "^1.0.13"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-dev-server": "^3.11.1"
+  }
 }
