Near final rewite of application

--- a/package.json
+++ b/package.json
@@ -58,10 +58,8 @@
     "@testing-library/react": "^13.4.0",
     "@types/aws-lambda": "^8.10.46",
     "@types/classnames": "^2.2.8",
-    "@types/express": "^4.17.13",
     "@types/jest": "^24.0.13",
-    "@types/node": "^14.0.8",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "20.8.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/serialize-javascript": "^1.5.0",
@@ -73,6 +71,9 @@
     "@types/webpack-merge": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "@types/express": "^4.17.16",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "assets-webpack-plugin": "^7.0.0",
     "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.824.0",
@@ -90,7 +91,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^4.0.0",
     "cross-fetch": "^3.1.4",
-    "css-loader": "^5.0.1",
+    "css-loader": "6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "cz-customizable": "^6.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
@@ -115,12 +116,13 @@
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^1.3.3",
     "nodemon": "^2.0.7",
+    "postcss": "^8.4.25",
     "postcss-assets": "^5.0.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^7.3.3",
     "postcss-media-variables": "^2.0.1",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^9.0.0",
     "postcss-simple-vars": "^6.0.3",
     "postcss-url": "^10.1.1",
     "prettier": "^1.18.2",
@@ -139,7 +141,7 @@
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^29.0.1",
     "typed-css-modules": "^0.7.2",
-    "typescript": "^4.8.3",
+    "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
     "webpack": "^5.76.0",
@@ -152,6 +154,8 @@
   "dependencies": {
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@lagunovsky/redux-react-router": "^4.0.0",
     "@sentry/node": "^7.54.0",
     "@sentry/react": "^7.54.0",
@@ -168,7 +172,6 @@
     "moment": "^2.24.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
