--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "@testing-library/react": "^13.4.0",
     "@types/aws-lambda": "^8.10.46",
     "@types/classnames": "^2.2.8",
+    "@types/express": "^4.17.16",
     "@types/jest": "^24.0.13",
     "@types/node": "20.8.6",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.5",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/serialize-javascript": "^1.5.0",
@@ -71,9 +74,6 @@
     "@types/webpack-merge": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-    "@types/express": "^4.17.16",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "assets-webpack-plugin": "^7.0.0",
     "autoprefixer": "^10.4.14",
     "aws-sdk": "^2.824.0",
@@ -95,16 +95,9 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "cz-customizable": "^6.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "eslint": "^8.23.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.0.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
     "extend": "^3.0.1",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
@@ -141,7 +134,7 @@
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^29.0.1",
     "typed-css-modules": "^0.7.2",
-    "typescript": "^5.2.2",
+    "typescript": "5.1.6",
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
     "webpack": "^5.76.0",
@@ -163,6 +156,7 @@
     "@typeform/embed-react": "^2.24.0",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
+    "clsx": "^2.0.0",
     "core-js": "^3.8.2",
     "esbuild-loader": "^3.0.1",
     "express": "^4.18.2",
@@ -191,6 +185,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1",
