--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "core-js": "^3.8.2",
     "esbuild-loader": "^3.0.1",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.4",
     "history": "^5.3.0",
     "http-server": "^14.1.1",
     "https-browserify": "^1.0.0",
