--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "classnames": "^2.2.6",
     "clsx": "^2.0.0",
     "core-js": "^3.8.2",
+    "date-fns": "^2.30.0",
     "esbuild-loader": "^3.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
