Updated traefik domain and TLS config for production pipeline

--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -14,7 +14,6 @@ jobs:
       KUBECONFIG_FILE: '${{ secrets.KUBECONFIG_PROD }}'
 
     steps:
-
     - id: install-aws-cli
       uses: unfor19/install-aws-cli-action@v1
       with:
@@ -109,7 +108,7 @@ jobs:
         aws s3api put-bucket-cors --bucket devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }} --cors-configuration '{"CORSRules" : [{"AllowedHeaders":["*"],"AllowedMethods":["GET","HEAD", "POST"],"AllowedOrigins":["*"],"ExposeHeaders":[]}]}'
      
     - run: |
-        aws s3api put-bucket-policy --bucket devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }} --policy '{"Version": "2008-10-17", "Statement": [{ "Sid": "AllowPublicRead", "Effect": "Allow", "Principal": { "AWS": "*" }, "Action": ["s3:GetObject"], "Resource": ["arn:aws:s3:::devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }}/*" ] }] }'
+        aws s3api put-bucket-policy --bucket devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }} --policy '{ "Version": "2012-10-17", "Statement": { "Action": "s3:GetObject", "Effect": "Allow", "Resource": "arn:aws:s3:::devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }}/*", "Principal": "*" }}'
 
     - run: helm repo add devnotnull https://devnotnull-helm.s3.eu-west-2.amazonaws.com
     
