--- a/package.json
+++ b/package.json
@@ -140,7 +140,19 @@
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-merge": "^4.2.1",
     "webpackbar": "^4.0.0",
-    "yarn-upgrade-minor": "^1.0.13"
+    "yarn-upgrade-minor": "^1.0.13",
+    "esbuild-loader": "^3.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-dev-server": "^3.11.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "prettier": "^3.0.3",
+    "http-server": "^14.1.1",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   },
   "dependencies": {
     "@babel/register": "^7.18.9",
@@ -157,42 +169,18 @@
     "clsx": "^2.0.0",
     "core-js": "^3.8.2",
     "date-fns": "^2.30.0",
-    "esbuild-loader": "^3.0.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "express": "^4.18.2",
-    "framer-motion": "^10.16.4",
-    "history": "^5.3.0",
-    "http-server": "^14.1.1",
-    "https-browserify": "^1.0.0",
-    "moment": "^2.24.0",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
-    "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
     "react-intersection-observer": "^9.4.0",
-    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
-    "react-router-redux": "4.0.8",
     "react-syntax-highlighter": "^15.5.0",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.2.3",
     "regenerator-runtime": "^0.13.11",
-    "reselect": "^4.1.8",
     "source-map-support": "^0.5.21",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typesafe-actions": "5.1.0",
-    "web-vitals": "^3.0.1",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.1"
+    "web-vitals": "^3.0.1"
   }
 }
