--- a/package.json
+++ b/package.json
@@ -152,7 +152,8 @@
     "http-server": "^14.1.1",
     "https-browserify": "^1.0.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
     "@babel/register": "^7.18.9",
