--- a/package.json
+++ b/package.json
@@ -95,12 +95,17 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "cz-customizable": "^6.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "esbuild-loader": "^3.0.1",
     "eslint": "^8.52.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "extend": "^3.0.1",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "fs-extra": "7.0.0",
+    "http-server": "^14.1.1",
+    "https-browserify": "^1.0.0",
     "husky": "^8.0.0",
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^29.0.3",
@@ -108,6 +113,8 @@
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^1.3.3",
     "nodemon": "^2.0.7",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.25",
     "postcss-assets": "^5.0.0",
     "postcss-custom-media": "^7.0.8",
@@ -117,6 +124,7 @@
     "postcss-preset-env": "^9.0.0",
     "postcss-simple-vars": "^6.0.3",
     "postcss-url": "^10.1.1",
+    "prettier": "^3.0.3",
     "process": "0.11.10",
     "redux-devtools-extension": "^2.13.0",
     "resolve": "^1.22.2",
@@ -128,32 +136,24 @@
     "serverless-prune-plugin": "^1.4.3",
     "serverless-s3-local": "^0.7.2",
     "serverless-s3-sync": "^1.15.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "ts-jest": "^29.0.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typed-css-modules": "^0.7.2",
     "typescript": "5.1.6",
     "url-loader": "^4.1.1",
     "wait-on": "^6.0.0",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.3.1",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-dev-server": "^3.11.1",
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-merge": "^4.2.1",
     "webpackbar": "^4.0.0",
-    "yarn-upgrade-minor": "^1.0.13",
-    "esbuild-loader": "^3.0.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.1",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "prettier": "^3.0.3",
-    "http-server": "^14.1.1",
-    "https-browserify": "^1.0.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tsconfig-paths-webpack-plugin": "^4.0.1"
+    "yarn-upgrade-minor": "^1.0.13"
   },
   "dependencies": {
     "@babel/register": "^7.18.9",
@@ -174,6 +174,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-helmet": "6.1.0",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.14.0",
