--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "husky": "^8.0.0",
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.2.2",
     "mini-css-extract-plugin": "^1.3.3",
     "nodemon": "^2.0.7",
@@ -164,6 +164,8 @@
     "@sentry/node": "^7.54.0",
     "@sentry/react": "^7.54.0",
     "@sentry/tracing": "^7.54.0",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/user-event": "^14.5.1",
     "@typeform/embed-react": "^2.24.0",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
