--- a/package.json
+++ b/package.json
@@ -173,11 +173,13 @@
     "core-js": "^3.8.2",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "i18next": "^23.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
     "react-helmet": "6.1.0",
+    "react-i18next": "^13.3.1",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.14.0",
     "react-syntax-highlighter": "^15.5.0",
