--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "clsx": "^2.0.0",
+    "compression": "^1.7.4",
     "core-js": "^3.8.2",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
@@ -185,6 +186,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "regenerator-runtime": "^0.13.11",
     "source-map-support": "^0.5.21",
+    "spdy": "^4.0.2",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
     "web-vitals": "^3.0.1"
