--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "yarn-upgrade-minor": "^1.0.13"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
     "@headlessui/react": "^1.7.17",
@@ -180,6 +181,7 @@
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
     "react-helmet": "6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^13.3.1",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.14.0",
