--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -104,6 +104,9 @@ jobs:
     - name: Copy S3 bucket assets
       run: aws s3 cp ./build s3://devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }} --recursive
   
+    - run: |
+        aws s3api delete-public-access-block --bucket devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }}
+
     - name: Set S3 bucket access
       run: aws s3api put-public-access-block --bucket devnotnull-ui-feat-${{ steps.vars.outputs.branch_formatted }} --public-access-block-configuration "BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true" || true
 
