--- a/package.json
+++ b/package.json
@@ -153,22 +153,20 @@
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-merge": "^4.2.1",
     "webpackbar": "^4.0.0",
-    "yarn-upgrade-minor": "^1.0.13"
+    "yarn-upgrade-minor": "^1.0.13",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/compression": "^1.7.5"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.3",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.12.5",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@lagunovsky/redux-react-router": "^4.0.0",
     "@sentry/node": "^7.54.0",
     "@sentry/react": "^7.54.0",
     "@sentry/tracing": "^7.54.0",
-    "@testing-library/jest-dom": "6.1.4",
-    "@testing-library/user-event": "^14.5.1",
     "@typeform/embed-react": "^2.24.0",
-    "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
@@ -188,9 +186,9 @@
     "react-syntax-highlighter": "^15.5.0",
     "regenerator-runtime": "^0.13.11",
     "source-map-support": "^0.5.21",
-    "spdy": "^4.0.2",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
-    "web-vitals": "^3.0.1"
+    "web-vitals": "^3.0.1",
+    "zod": "^3.23.8"
   }
 }
