Rework models to use zod

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "sls offline start --noPrependStageInUrl",
     "watch": "nodemon --watch './build' --exec 'sls offline start --noPrependStageInUrl'",
     "watch:pure": "nodemon --watch './build' --exec 'node dist/server.js'",
-    "watch:types": "nodemon --watch './src' --exec 'yarn types'",
+    "watch:types": "nodemon --watch './src' --exec 'bun types'",
     "devclient": "NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodclient": "NODE_ENV=production TARGET=client webpack --watch",
     "devserver": "NODE_ENV=development TARGET=serverless webpack --watch",
@@ -23,26 +23,25 @@
     "build:client:prod:pure": "TARGET=client NODE_ENV=production webpack",
     "build:server": "TARGET=server webpack",
     "build:server:prod": "NODE_ENV=production TARGET=server webpack",
-    "build": "yarn build:client && yarn build:server",
-    "build:dev": "yarn cleanup && NODE_ENV=development yarn build:client && yarn build:server",
+    "build": "bun build:client && bun build:server",
+    "build:dev": "bun cleanup && NODE_ENV=development bun build:client && bun build:server",
     "watch:server": "TARGET=serverless webpack --watch",
-    "build:prod": "yarn cleanup && NODE_ENV=production yarn build:client && NODE_ENV=production yarn build:server",
-    "dev": "yarn cleanup && yarn types && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"yarn devclient\" \"yarn devserver\" \"yarn watch\"",
-    "prod": "yarn cleanup && yarn types && yarn build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"yarn prodclient\" \"http-server ./build -p 9000 --cors\" \"yarn prodserver\" \"yarn watch\" \"yarn watch:types\"",
-    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
-    "prod:pure": "yarn cleanup && yarn build:style-typings && yarn build:client:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=production concurrently -r --kill-others \"yarn prodserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
+    "build:prod": "bun cleanup && NODE_ENV=production bun build:client && NODE_ENV=production bun build:server",
+    "dev": "bun cleanup && bun types && NODE_ENV=development NODE_CONFIG_ENV=development-local concurrently -r \"bun devclient\" \"bun devserver\" \"bun watch\"",
+    "prod": "bun cleanup && bun types && bun build:client:prod && NODE_ENV=production NODE_CONFIG_ENV=development-local concurrently -r \"bun prodclient\" \"http-server ./build -p 9000 --cors\" \"bun prodserver\" \"bun watch\" \"bun watch:types\"",
+    "dev:pure": "bun cleanup && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"bun devserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
+    "prod:pure": "bun cleanup && bun build:client:prod && NODE_ENV=production IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=production concurrently -r --kill-others \"bun prodserver:pure\" \"TARGET=server webpack --watch\" \"wait-on ./build/server.js && node build/server.js\"",
     "test:types": "tsc --noEmit",
-    "hook:before:offline:start": "yarn build:client:prod",
-    "build:style-typings": "node webpack/style-typings.js",
+    "hook:before:offline:start": "bun build:client:prod",
     "lint": "eslint ./src --no-ignore",
     "lint:fix": "eslint ./src --fix --no-ignore",
     "types": "tcm src",
     "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
-    "build:dev:pure": "yarn cleanup && NODE_ENV=development yarn build:client && NODE_ENV=development TARGET=server webpack",
-    "build:prod:pure": "yarn cleanup && NODE_ENV=production yarn build:client:prod && NODE_ENV=production TARGET=server webpack --mode production",
-    "deploy:dev": "yarn build:dev && serverless deploy --verbose --stage development",
-    "deploy:prod": "yarn build:prod && serverless deploy --verbose --stage production",
+    "build:dev:pure": "bun cleanup && NODE_ENV=development bun build:client && NODE_ENV=development TARGET=server webpack",
+    "build:prod:pure": "bun cleanup && NODE_ENV=production bun build:client:prod && NODE_ENV=production TARGET=server webpack --mode production",
+    "deploy:dev": "bun build:dev && serverless deploy --verbose --stage development",
+    "deploy:prod": "bun build:prod && serverless deploy --verbose --stage production",
     "deploy:pure:dev": "serverless deploy --verbose --stage development",
     "deploy:pure:prod": "serverless deploy --verbose --stage production",
     "prepare": "husky install"
@@ -156,7 +155,7 @@
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^6.0.1",
     "webpackbar": "^6.0.1",
-    "yarn-upgrade-minor": "^1.0.13"
+    "bun-upgrade-minor": "^1.0.13"
   },
   "dependencies": {
     "@babel/register": "^7.25.7",
