--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
     "lib": ["dom", "es2018"],
     "baseUrl": ".",
     "paths": {
-      "@web/*": ["src/web/*"],
+      "@models/*": ["src/models/*"],
       "@client/*": ["src/client/*"],
       "@server/*": ["src/server/*"],
       "@core/*": ["src/core/*"],
-      "@components/*": ["src/web/components/*"],
+      "@components/*": ["src/components/*"],
       "@config/*": ["src/config/*"],
       "@styles/*": ["src/style/*"]
     },
