--- a/.github/workflows/on_push_development.yml
+++ b/.github/workflows/on_push_development.yml
@@ -80,15 +80,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - run: npm install -g yarn
+    - run: npm install -g bun
 
-    - run: yarn install 
+    - run: bun install 
 
-    - run: yarn lint 
+    - run: bun lint 
 
-    # - run: yarn test
-
-    - run: yarn build:prod:pure
+    - run: bun build:prod
 
     - name: Build and push
       uses: docker/build-push-action@v2
